--- a/styles/global.css
+++ b/styles/global.css
@@ -1,5 +1,6 @@
 #___gatsby {
   height: 100%;
+  font-family: 'Open Sans', sans-serif;
 }
 
 #gatsby-focus-wrapper {
@@ -12,4 +13,5 @@ html {
 
 body {
   height: 100%;
+  margin:0;
 }
