--- a/styles/layout-style/header.module.css
+++ b/styles/layout-style/header.module.css
@@ -71,6 +71,7 @@ ul{
     background:#01937C;
     display:none;
     top:100%;
+    left:0;
     font-size: 14px;
     white-space: nowrap;
     min-width: 100%;
