--- a/styles/components/course_card.module.css
+++ b/styles/components/course_card.module.css
@@ -15,6 +15,7 @@
     align-items: center;
     justify-content: space-around;
     flex:1;
+    box-sizing: border-box;
     padding: 10px 10px 15px 10px;
 }
 
