--- a/styles/pages/course_detail.module.css
+++ b/styles/pages/course_detail.module.css
@@ -1,5 +1,5 @@
 .inner_container{
-    background-color: #f5f0f0;
+    background-color: #fbf7ff;
     max-width: 80%;
     padding:20px;
     margin-bottom: 30px;
