--- a/styles/pages/course_detail.module.css
+++ b/styles/pages/course_detail.module.css
@@ -4,6 +4,7 @@
     padding:20px;
     margin-bottom: 30px;
     color:#38384e;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .inner_container h2{
