--- a/styles/components/course_card.module.css
+++ b/styles/components/course_card.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     width:23%;
     margin-right: 10px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     border-radius: 6px;
 }
 
