--- a/styles/layout-style/footer.module.css
+++ b/styles/layout-style/footer.module.css
@@ -10,7 +10,7 @@
 .footer_column_holder{
     display:flex;
     justify-content: space-evenly;
-    width: 100%;
+    width: 95%;
 }
 
 .footer_column{
@@ -19,6 +19,7 @@
     color:white;
     font-size: 14px;
     line-height: 25px;
+    flex:.28
 }
 
 .footer_column a:hover{
@@ -33,4 +34,5 @@
     border-bottom: 1px solid rgb(107, 111, 124);
     margin-bottom: 10px;
     color:rgb(145, 150, 167);
+    padding-bottom: 10px;
 }
