--- a/styles/pages/course_detail.module.css
+++ b/styles/pages/course_detail.module.css
@@ -7,6 +7,23 @@
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
+.detail_general_wrapper{
+      display:flex;
+      justify-content: space-evenly;
+      flex-direction: column;
+      align-items: center;
+      box-sizing: border-box;
+      padding:30px;
+}
+
 .inner_container h2{
     text-align: center;
+}
+
+.header_title{
+    width: calc(80% + 20px);
+    color:#38384e;
+    font-size: 30px;
+
+    padding:25px 0px;
 }
