--- a/styles/pages/faq.module.css
+++ b/styles/pages/faq.module.css
@@ -21,8 +21,11 @@
 }
 
 .inner_container span{
-    display:none;
+    height: 0px;
+    display:block;
+    overflow: hidden;
     padding: 0 0 0 20px;
+    transition: 200ms;
 }
 
 .inner_container h3 {
@@ -30,6 +33,7 @@
     font-size: 23px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     padding:15px;
+    margin:10px 0;
     display:flex;
     align-items: center;
     justify-content: space-between;
