--- a/styles/pages/home.module.css
+++ b/styles/pages/home.module.css
@@ -7,10 +7,10 @@
 
 .inner_holder{
     display:flex;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     flex-wrap: wrap;
     margin-top: 40px;
-    margin-bottom: 50px;
+ 
 }
 .outer_wrapper{
     width: 80%;
