--- a/styles/components/course_card.module.css
+++ b/styles/components/course_card.module.css
@@ -10,6 +10,12 @@
     margin-right: 20px;
 }
 
+@media only screen and (max-width: 600px) {
+    .main_wrapper {
+        width:98%;
+    }
+}
+
 .inner_holder{
     width: 100%;
     display:flex;
@@ -26,7 +32,7 @@
 }
 
 .view_link{
-    font-size: 15px;
+    font-size: 1.1rem;
     padding: 10px;
     display: flex;
     justify-content:center;
