--- a/styles/global.css
+++ b/styles/global.css
@@ -13,6 +13,23 @@ a{
 
 html {
   height: 100%;
+  font-size: 16px;
+}
+@media only screen and (max-width: 1024px) {
+  html {
+    font-size: 14px;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  html {
+    font-size: 12px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  html {
+    font-size: 10px;
+  }
 }
 p{
   margin:0px;
