--- a/styles/pages/home.module.css
+++ b/styles/pages/home.module.css
@@ -15,6 +15,19 @@
  background-size: cover;
 }
 
+.logo_holder{
+   display: flex;
+   justify-content: flex-end;
+ }
+ 
+ .text{
+    padding: 60px;
+    text-align: center;
+    font-size: 3rem;
+    color: white;
+ }
+ 
+
 .layer {
  background: linear-gradient(
   0deg,
@@ -23,6 +36,7 @@
  );
  display: flex;
  justify-content: flex-end;
+ align-items: stretch;
  flex-direction: column;
  width: 100%;
  height: 100%;
@@ -39,24 +53,18 @@
  width: 80%;
 }
 
-.logo_holder{
-  display: flex;
-  justify-content: flex-end;
-}
-
-.text{
-   padding: 60px;
-   text-align: center;
-}
 
 @media only screen and (max-width: 700px) {
    .logo_holder {
      justify-content: center;
+     padding-bottom: 10px;
    }
    .banner{
-      width: 98%;
+      width: 100%;
    }
    .text{
-      padding: 20;
+      padding:5px;
+      padding-bottom: 30px;
+      font-size: 2rem;
    }
  }
