--- a/styles/layout-style/header.module.css
+++ b/styles/layout-style/header.module.css
@@ -116,3 +116,16 @@ ul {
 .subLinks li:hover {
  background-color: #464660;
 }
+
+.responsive_dropdown{
+  display: none;
+}
+
+@media only screen and (max-width: 700px) {
+   .links{
+      display: none;
+   }
+   .responsive_dropdown {
+      display: block;
+   }
+ }
