--- a/styles/pages/faq.module.css
+++ b/styles/pages/faq.module.css
@@ -30,7 +30,7 @@
 
 .inner_container h3 {
     color:#01937C;
-    font-size: 23px;
+    font-size: 1.2rem;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     padding:15px;
     margin:10px 0;
@@ -60,3 +60,9 @@
 
     padding:25px 0px;
 }
+
+@media only screen and (max-width: 700px) {
+    .inner_container{
+        width: 95%;
+    }
+  }
