--- a/styles/layout-style/header.module.css
+++ b/styles/layout-style/header.module.css
@@ -117,15 +117,17 @@ ul {
  background-color: #464660;
 }
 
-.responsive_dropdown{
-  display: none;
+.ResponsiveNav {
+   display: none;
 }
-
-@media only screen and (max-width: 700px) {
-   .links{
-      display: none;
-   }
-   .responsive_dropdown {
+.Non_Responsive_Nav {
+   display: block;
+}
+@media only screen and (max-width: 1030px) {
+   .ResponsiveNav {
       display: block;
    }
- }
+   .Non_Responsive_Nav{
+      display:none;
+   }
+}
