--- a/styles/pages/course_detail.module.css
+++ b/styles/pages/course_detail.module.css
@@ -1,6 +1,6 @@
 .inner_container{
     background-color: #fbf7ff;
-    max-width: 80%;
+    width: 87%;
     padding:20px;
     margin-bottom: 30px;
     color:#38384e;
@@ -23,6 +23,7 @@
 .inner_container h3 {
     color:#01937C;
     font-size: 23px;
+  
 }
 
 .header_title{
@@ -31,4 +32,31 @@
     font-size: 30px;
     padding:25px 0px;
     margin: 0;
+}
+.course_banner{
+    width:87%;
+    max-height: 400px;
+    z-index: -10;
+    margin: 20px;
+}
+.content{
+    font-size: 1.1rem;
+}
+
+@media only screen and (max-width: 800px) {
+    .inner_container {
+        max-width: 100%;
+    }
+    .content{
+        font-size: 1.25rem;
+    }
+    .content span > strong{
+        font-size: 1.2rem !important;
+    }
+    .detail_general_wrapper{
+        padding:5px
+    }
+    h2{
+        text-align: center;
+    }   
 }
