--- a/styles/pages/home.module.css
+++ b/styles/pages/home.module.css
@@ -7,8 +7,8 @@
 .banner {
    position: relative;
  width: 90%;
- height: 30rem;
- background: url("/banner.jpg") no-repeat center center;
+ height: 36rem;
+ background: url("/new-banner.png") no-repeat center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
@@ -17,7 +17,7 @@
 
 .logo_holder{
    display: flex;
-   justify-content: flex-end;
+   justify-content: flex-start;
  }
  
  .text{
@@ -29,11 +29,7 @@
  
 
 .layer {
- background: linear-gradient(
-  0deg,
-  rgb(40, 17, 54) 9%,
-  rgba(255, 255, 255, 0) 100%
- );
+
  display: flex;
  justify-content: flex-end;
  align-items: stretch;
@@ -60,7 +56,8 @@
      padding-bottom: 10px;
    }
    .banner{
-      width: 100%;
+      width: 120%;
+      height: 28rem;
    }
    .text{
       padding:5px;
