--- a/styles/pages/home.module.css
+++ b/styles/pages/home.module.css
@@ -4,11 +4,20 @@
  flex-direction: column;
  align-items: center;
 }
-.banner {
+
+.banner_holder {
+   width: 90%;
+   height: 36rem;
+   overflow-x: hidden;
+   overflow-y: hidden;
    position: relative;
- width: 90%;
- height: 36rem;
- background: url("/new-banner.png") no-repeat center center;
+}
+
+.banner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background: no-repeat center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
@@ -26,10 +35,35 @@
     font-size: 3rem;
     color: white;
  }
- 
 
+.dot_holder{
+   position:absolute;
+   top:0;
+   left:0;
+   padding:10px;
+   z-index: 50;
+}
+.slider_dot{
+   height: 11px;
+   width: 11px;
+   margin-right: 10px;
+   background-color: rgb(255, 255, 255);
+   border-radius: 50%;
+   display: inline-block;
+}
+.slider_dot:hover{
+   cursor: pointer;
+}
+
+.slider_wrapper{
+ width: 300%;
+ height: 100%;
+ display: flex;
+ position: relative;
+ transition: 800ms;
+}
 .layer {
-
+  
  display: flex;
  justify-content: flex-end;
  align-items: stretch;
@@ -55,9 +89,9 @@
      justify-content: center;
      padding-bottom: 10px;
    }
-   .banner{
-      width: 120%;
-      height: 28rem;
+   .banner_holder{
+      width: 101%;
+      height: 24rem;
    }
    .text{
       padding:5px;
