--- a/styles/global.css
+++ b/styles/global.css
@@ -1,5 +1,5 @@
 #___gatsby {
-  font-family: 'Karla', sans-serif;
+ font-family: 'Raleway', sans-serif;
 }
 
 a{
@@ -13,7 +13,6 @@ a{
 html {
   height: 100%;
   font-size: 16px;
-
 
   ;
 }
