--- a/styles/pages/home.module.css
+++ b/styles/pages/home.module.css
@@ -1,5 +1,4 @@
 .main_wrapper {
- padding: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
@@ -64,6 +63,7 @@
  position: relative;
  transition: 800ms;
 }
+
 .layer {
   
  display: flex;
@@ -73,6 +73,56 @@
  width: 100%;
  height: 100%;
  z-index: 100000000000;
+}
+
+.intro{
+   display: flex;
+   justify-content: space-around;
+   align-items: center;
+   margin-bottom: 5rem;
+   margin-top: 5rem;
+}
+
+.outer_mid_body{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   padding:5rem 0;
+   width: 100%;
+   background: rgba(25, 25, 112, 0.9);
+}
+.mid_body{
+   width: 80%;
+   display: flex;
+   justify-content: space-around;
+   align-items: center;
+   color:#FFFFFF;
+   flex-wrap: wrap;
+}
+
+.body_richmond_college{
+   display: flex;
+   flex-direction: column;
+   align-items:center;
+   justify-content: space-around;
+   color:#191970;
+   width: 77%;
+}
+
+.where_to_start_outer{
+   width: 100%;
+   display: flex;
+   justify-content: center;
+   padding:30px;
+   background-color: #37474F;
+   color:#FFFFFF
+}
+
+.where_to_start_inner{
+   width: 80%;
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
 }
 
 .inner_holder {
@@ -90,6 +140,11 @@
    .logo_holder {
      justify-content: center;
      padding-bottom: 10px;
+   }
+   .wrap{
+      flex-direction: column !important;
+      align-items: center;
+      width: 100%;
    }
    .banner_holder{
       width: 101%;
