--- a/styles/pages/home.module.css
+++ b/styles/pages/home.module.css
@@ -1,7 +1,7 @@
 .main_wrapper {
  display: flex;
  flex-direction: column;
- align-items: center;
+ 
 }
 
 .banner_holder {
@@ -23,6 +23,25 @@
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
+}
+.classic_button{
+   background-color:#FBC933;
+   color:#191970;
+   outline: none;
+   border: none;
+   border-radius: 5px;
+   padding:10px 20px;
+   font-weight: 600;
+   box-shadow: 0 8px 0px #bb9625;
+   transition: all 150ms;
+}
+.classic_button:hover{
+   cursor: pointer;
+}
+
+.classic_button:active{
+   box-shadow:none;
+   transform: translateY(8px);
 }
 
 .logo_holder{
@@ -77,7 +96,7 @@
 
 .intro{
    display: flex;
-   justify-content: space-around;
+   justify-content: space-evenly;
    align-items: center;
    margin-bottom: 5rem;
    margin-top: 5rem;
@@ -123,6 +142,56 @@
    display: flex;
    align-items: center;
    justify-content: space-between;
+}
+
+.classic_text{
+   color: #191970;
+   font-size: 2rem;
+   font-weight: 700;
+   margin-bottom: 40px;
+}
+.courses_wrapper{
+ width: 100%;
+ display: flex;
+ justify-content: center;
+ padding:4rem 0;
+}
+
+.accreditation{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+}
+
+
+.accreditation div:nth-child(2) img{
+   height: 6rem;
+   margin-right: 2rem;
+   margin-bottom: 2rem;
+}
+
+.course{
+   display:flex;
+   justify-content: space-between;
+   align-items: center;
+   width: 80%;
+}
+
+.course_inner{
+
+   display:flex;
+   flex-direction:column;
+   align-items:flex-start;
+   color:#191970;
+   margin-right:100px;
+   flex: 1;
+}
+
+.course_background_image{
+   flex:0.5;
+   display:flex;
+   justify-content: center;
+   align-items: center;
 }
 
 .inner_holder {
