--- a/styles/layout-style/footer.module.css
+++ b/styles/layout-style/footer.module.css
@@ -1,10 +1,9 @@
 .main_wrapper {
- background-color: #2B2B2B;
- padding: 50px 0px;
+ background-color: #ffffff;
+ padding: 5rem 0px;
  display: flex;
  flex-direction: column;
  align-items: center;
- margin-top: 60px;
 }
 
 .footer_column_holder {
@@ -16,7 +15,8 @@
 .footer_column {
  display: flex;
  flex-direction: column;
- color: white;
+ align-items: flex-start;
+ color: #191970;
  font-size: 13.3px;
  line-height: 25px;
  flex: 0.28;
@@ -25,7 +25,7 @@
 
 .footer_link{
 font-weight: 600;
-color: white;
+color: #191970;
 }
 .footer_link:hover{
    color: #FEC618;
@@ -35,14 +35,16 @@ color: white;
 }
 
 .footer_column_header {
- border-bottom: 1px solid #FEC618;
  margin-bottom: 14px;
- color: #FEC618;
+ color: #050516;
  padding-bottom: 10px;
+ font-weight: bolder !important;
+ 
 }
 
 .footer_column span span {
- color: rgb(177, 176, 176);
+ color: #37474F;
+ font-weight: bolder
 }
 
 
