--- a/styles/components/course_option_card.module.css
+++ b/styles/components/course_option_card.module.css
@@ -3,12 +3,14 @@
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
-   padding: 20px;
+   padding: 2.3rem 1.4rem;
    background-color: #F1F1F1;
    color:#191970;
-   width:20%;
    min-height: 330px;
    font-size: 0.9rem;
+   min-width: 17rem;
+   margin-bottom: 30px;
+   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .classic_button{
@@ -17,8 +19,7 @@
    outline: none;
    border: none;
    border-radius: 5px;
-   padding:10px 20px;
-   font-weight: 600;
+   padding:0.7rem 1.4rem;
    box-shadow: 0 5px 0px #bb9625;
    transition: all 120ms;
 }
@@ -30,3 +31,4 @@
    box-shadow:none;
    transform: translateY(5px);
 }
+
