--- a/styles/global.css
+++ b/styles/global.css
@@ -1,5 +1,6 @@
 #___gatsby {
  font-family: 'Raleway', sans-serif;
+ font-size: 1.05rem;
 }
 
 a{
@@ -31,6 +32,9 @@ html {
   html {
     font-size: 10px;
   }
+}
+ul li{
+  margin-bottom: 10px;
 }
 p{
   margin:0px;
