--- a/styles/components/course_option_card.module.css
+++ b/styles/components/course_option_card.module.css
@@ -3,12 +3,12 @@
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
-   padding: 2.3rem 1.4rem;
+   padding: 2.3rem 1.9rem;
    background-color: #F1F1F1;
    color:#191970;
    min-height: 300px;
    font-size: 0.9rem;
-   max-width: 270px;
+   width: 240px;
    margin-bottom: 30px;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
