--- a/styles/pages/faq.module.css
+++ b/styles/pages/faq.module.css
@@ -1,10 +1,7 @@
 .inner_container{
-    background-color: #fbf7ff;
-    width: 80%;
-    padding:20px;
+
     margin-bottom: 30px;
-    color:#38384e;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    color:#191970;
 }
 
 .detail_general_wrapper{
@@ -29,14 +26,14 @@
 }
 
 .inner_container h3 {
-    color:#01937C;
-    font-size: 1.5rem;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    color:#191970;;
+    font-size: 1rem;
     padding:15px;
-    margin:10px 0;
+    margin:8px 0;
     display:flex;
     align-items: center;
     justify-content: space-between;
+    box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
 }
 
 .inner_container h3::after {
@@ -53,14 +50,13 @@
     cursor: pointer;
 }
 .content{
-    font-size: 1.2rem;
+    font-size: 1rem;
     line-height: 1.4;
 }
 .header_title{
     width: calc(80% + 20px);
-    color:#38384e;
+    color:#191970;
     font-size: 30px;
-
     padding:25px 0px;
 }
 
