--- a/styles/pages/course_detail.module.css
+++ b/styles/pages/course_detail.module.css
@@ -13,6 +13,10 @@
       padding:30px;
 }
 
+.detail_general_wrapper strong {
+    color:#191970 !important
+}
+
 div span strong{
  color:#191970 !important
 }
@@ -57,6 +61,9 @@ div span strong{
     z-index: -10;
     margin: 20px;
 }
+
+
+
 .content{
     line-height: 1.6;
     margin-bottom: 30px;
