--- a/styles/pages/faq.module.css
+++ b/styles/pages/faq.module.css
@@ -17,9 +17,8 @@
     text-align: center;
 }
 
-.inner_container span{
+.inner_container div div{
     height: 0px;
-    display:flex;
     overflow: hidden;
     padding: 0 0 0 20px;
     transition: 200ms;
