--- a/styles/global.css
+++ b/styles/global.css
@@ -24,16 +24,17 @@ html {
   html {
     font-size: 14px;
   }
+  iframe{
+    width: 95% !important;
+    height: 270px !important;
+  }
 }
 
 @media only screen and (max-width: 800px) {
   html {
     font-size: 12px;
   }
-  iframe{
-    width: 95% !important;
-    max-height: 250px !important;
-  }
+  
 }
 @media only screen and (max-width: 600px) {
   html {
