--- a/styles/pages/home.module.css
+++ b/styles/pages/home.module.css
@@ -221,6 +221,16 @@
    width: 85%;
 }
 
+@media only screen and (max-width: 1024px) {
+   
+   .course{
+      flex-direction: column;
+   }
+   .course iframe{
+      margin-top: 30px;
+   }
+ }
+
 
 @media only screen and (max-width: 700px) {
    .logo_holder {
